[REFACTOR/#169] 성지순례 카테고리 조회 서비스 리팩토링
변경 내역
- 인터페이스 메서드 간략하게 수정
- 메서드 분리