@@ -1,32 +1,38 @@
 package com.favoriteplace.app.pilgrimage.service;
 
 import com.favoriteplace.app.member.domain.Member;
+import com.favoriteplace.app.member.repository.MemberRepository;
 import com.favoriteplace.app.pilgrimage.controller.dto.PilgrimageResponseDto;
+import com.favoriteplace.app.pilgrimage.controller.dto.PilgrimageResponseDto.PilgrimageAddressDetailDto;
 import com.favoriteplace.app.pilgrimage.controller.dto.PilgrimageResponseDto.PilgrimageCategoryRegionDto;
 import com.favoriteplace.app.pilgrimage.converter.PilgrimageConverter;
 import com.favoriteplace.app.pilgrimage.domain.Pilgrimage;
 import com.favoriteplace.app.pilgrimage.repository.PilgrimageRepository;
 import com.favoriteplace.app.pilgrimage.repository.VisitedPilgrimageRepository;
-import com.favoriteplace.app.rally.controller.dto.RallyResponseDto;
 import com.favoriteplace.app.rally.controller.dto.RallyResponseDto.PilgrimageCategoryAnimeDto;
 import com.favoriteplace.app.rally.converter.RallyConverter;
 import com.favoriteplace.app.rally.domain.Address;
 import com.favoriteplace.app.rally.domain.Rally;
 import com.favoriteplace.app.rally.repository.AddressRepository;
 import com.favoriteplace.app.rally.repository.RallyRepository;
+import com.favoriteplace.global.auth.resolver.UserEmail;
 import com.favoriteplace.global.exception.ErrorCode;
 import com.favoriteplace.global.exception.RestApiException;
+
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
+
 import lombok.RequiredArgsConstructor;
+
 import org.jetbrains.annotations.NotNull;
 import org.springframework.stereotype.Service;
 
 @Service
 @RequiredArgsConstructor
 public class PilgrimageCategoryQueryService {
+    private final MemberRepository memberRepository;
     private final RallyRepository rallyRepository;
     private final VisitedPilgrimageRepository visitedPilgrimageRepository;
     private final AddressRepository addressRepository;
@@ -34,21 +40,18 @@ public class PilgrimageCategoryQueryService {
 
     /***
      * 성지순례 애니 별 카테고리
-     * @param member
+     * @param email 사용자 이메일
      * @return
      */
-    public List<PilgrimageCategoryAnimeDto> getCategoryAnime(Member member) {
-        // 전체 랠리 최신 순으로 조회하기
+    public List<PilgrimageCategoryAnimeDto> getCategoryAnime(@UserEmail String email) {
         List<Rally> rallyList = rallyRepository.findAllOrderByCreatedAt();
-        if (member == null) {
-            return rallyList.stream()
-                    .map(rally -> RallyConverter.toPilgrimageCategoryAnimeDto(rally, 0L))
-                    .collect(Collectors.toList());
+
+        if (email == null || email.isEmpty()) {
+            return getPilgrimageAnimeCategoryWithoutMember(rallyList);
         }
-        return rallyList.stream().map(rally -> {
-            Long visitedPilgrimages = visitedPilgrimageRepository.findByDistinctCount(member.getId(), rally.getId());
-            return RallyConverter.toPilgrimageCategoryAnimeDto(rally, visitedPilgrimages);
-        }).collect(Collectors.toList());
+
+        Member member = getMemberByEmail(email);
+        return getPilgrimageAnimeCategoryWithMember(rallyList, member);
     }
 
     /***
@@ -58,14 +61,8 @@ public class PilgrimageCategoryQueryService {
     public List<PilgrimageResponseDto.PilgrimageCategoryRegionDto> getCategoryRegion() {
         List<Address> address = addressRepository.findAll();
 
-        // 전체 state 추출
-        Set<String> addressKeyList = address.stream()
-                .map(Address::getState)
-                .collect(Collectors.toSet());
-
-        // 전체 address 정보 state 별로 그룹화
-        Map<String, List<Address>> addressGroupByState = address.stream()
-                .collect(Collectors.groupingBy(Address::getState));
+        Set<String> addressKeyList = getStateAll(address);
+        Map<String, List<Address>> addressGroupByState = getDistrictGroupByState(address);
 
         return getPilgrimageCategoryRegionDtos(addressKeyList, addressGroupByState);
     }
@@ -76,8 +73,7 @@ public class PilgrimageCategoryQueryService {
      * @return district 별 성지순례 리스트
      */
     public List<PilgrimageResponseDto.PilgrimageCategoryRegionDetailDto> getCategoryRegionDetail(Long regionId) {
-        Address address = addressRepository.findById(regionId).orElseThrow(() ->
-                new RestApiException(ErrorCode.ADDRESS_NOT_FOUND));
+        Address address = getAddressByRegion(regionId);
         List<Pilgrimage> pilgrimages = pilgrimageRepository.findByAddress(address);
 
         return pilgrimages.stream()
@@ -85,22 +81,59 @@ public class PilgrimageCategoryQueryService {
                     Rally rally = rallyRepository.findByPilgrimage(pilgrimage);
                     return PilgrimageConverter.toPilgrimageCategoryRegionDetailDto(rally.getName(), pilgrimage);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @NotNull
-    private static List<PilgrimageCategoryRegionDto> getPilgrimageCategoryRegionDtos(Set<String> addressKeyList,
-                                                                                     Map<String, List<Address>> addressGroupByState) {
-        List<PilgrimageCategoryRegionDto> dtos = addressKeyList.stream().map(
+    private Member getMemberByEmail(String email) {
+        return memberRepository.findByEmail(email)
+                .orElseThrow(() -> new RestApiException(ErrorCode.USER_NOT_FOUND));
+    }
+
+    private List<PilgrimageCategoryAnimeDto> getPilgrimageAnimeCategoryWithMember(List<Rally> rallyList,
+                                                                                  Member member) {
+        return rallyList.stream().map(rally -> {
+            Long visitedPilgrimages = visitedPilgrimageRepository.findByDistinctCount(member.getId(), rally.getId());
+            return RallyConverter.toPilgrimageCategoryAnimeDto(rally, visitedPilgrimages);
+        }).toList();
+    }
+
+    private List<PilgrimageCategoryAnimeDto> getPilgrimageAnimeCategoryWithoutMember(List<Rally> rallyList) {
+        return rallyList.stream()
+                .map(rally -> RallyConverter.toPilgrimageCategoryAnimeDto(rally, 0L))
+                .toList();
+    }
+
+    private Address getAddressByRegion(Long regionId) {
+        return addressRepository.findById(regionId).orElseThrow(() ->
+                new RestApiException(ErrorCode.ADDRESS_NOT_FOUND));
+    }
+
+    private Map<String, List<Address>> getDistrictGroupByState(List<Address> address) {
+        return address.stream()
+                .collect(Collectors.groupingBy(Address::getState));
+    }
+
+    private Set<String> getStateAll(List<Address> address) {
+        return address.stream()
+                .map(Address::getState)
+                .collect(Collectors.toSet());
+    }
+
+    private List<PilgrimageCategoryRegionDto> getPilgrimageCategoryRegionDtos(Set<String> addressKeyList,
+                                                                              Map<String, List<Address>> addressGroupByState) {
+        return addressKeyList.stream().map(
                 stateKey -> {
                     List<Address> addressList = addressGroupByState.get(stateKey);
-                    List<PilgrimageResponseDto.PilgrimageAddressDetailDto> addressDetailDtos = addressList.stream()
-                            .map(addressDetail ->
-                                    PilgrimageConverter.toPilgrimageAddressDetailDto(addressDetail)
-                            ).collect(Collectors.toList());
+                    List<PilgrimageAddressDetailDto> addressDetailDtos = getPilgrimageAddressDetailDtos(
+                            addressList);
                     return PilgrimageConverter.toPilgrimageCategoryRegionDto(stateKey, addressDetailDtos);
                 }
-        ).collect(Collectors.toList());
-        return dtos;
+        ).toList();
+    }
+
+    private List<PilgrimageAddressDetailDto> getPilgrimageAddressDetailDtos(List<Address> addressList) {
+        return addressList.stream()
+                .map(PilgrimageConverter::toPilgrimageAddressDetailDto)
+                .toList();
     }
 }
